@@ -13,6 +13,7 @@ version <next>:
 - Intel QSV-accelerated H.264 encoding
 - MMAL-accelerated H.264 decoding
 - basic APNG encoder and muxer
+- unpack DivX-style packed B-frames in MPEG-4 bitstream filter
 
 
 version 2.6:
